# bezier-curve-renderer

./: Cargo.toml  README.md  outline.md
src/: bezier.rs  bezierSpline.rs  colorPalletes.rs  color_palettes.rs  main.rs
src/bezier/: bezier_curve.rs  bezier_renderer.rs  mod.rs
src/cubic_bezier/: cubic_bezier.rs  mod.rs  spline.rs
src/curves/: bezier_renderer.rs  cubic_bezier.rs  mod.rs  spline.rs
