[package]

name = "spinning-square"
version = "0.1.0"
authors = [
    "Brody Foster"
]

[[bin]]
name = "spinning-square"

[dependencies]
piston = "0.55.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.84.0"
conrod_core = "0.76.1"
conrod_piston = "0.76.1"